# KMind

./: .config.cmake.un~  .gitignore  CMakeLists.txt  README.md  Structure.xmind  kmind.cpp
core/: kmNode.cpp  kmNode.h  kmNodeType.h
gui/: kmMainWindow.cpp  kmMainWindow.h  kmMainWindow.ui  kmPaintWidget.cpp  kmPaintWidget.h
kmind/: CMakeLists.txt  kmMainWindow.cpp  kmMainWindow.h  kmMainWindow.ui  kmNode.cpp  kmNode.h  kmPaintWidget.cpp  kmPaintWidget.h  kmind.cpp  kmnodeedit.cpp  kmnodeedit.h  painter.h  styleUtil.cpp  styleUtil.h
kmind/gui/: kmMainWindow.h  kmPaintWidget.h
libs/node/: kmNode.cpp  kmNode.h
libs/painter/: formwork.h  painter.h
painter/: formwork.cpp  painter.cpp  painter.h  style.cpp  style.h  styleUtil.cpp  styleUtil.h
